2025-09-03  dwm  <dwm@ria.mcplex.net>

	* dwm.m4, configure: Use /opt/local/libexec/boost/1.88
	instead of /opt/local/libexec/boost/1.81 in boost asio
	search path.

2024-07-29  Daniel W. McRobb  <dwm@kiva.mcplex.net>

	* tagged as mccurtain-0.0.12

	* mkrelease.sh: 'push --tags' should be 'push --follow-tags'

2024-07-29  Daniel W. McRobb  <dwm@spark.mcplex.net>

	* classes/include/DwmMcCurtainAS2Ipv4NetDb.hh
	* classes/include/DwmMcCurtainRequests.hh
	* classes/include/DwmMcCurtainRipeAsnTxt.hh
	Don't need to inherit from StreamIOCapable.

	* scripts/updatecurtaindata.sh: script to update asn.txt (from
	RIPE), as2ipv4.db and ipv42as.db,

2024-05-31  Daniel McRobb  <dwm@thrip.mcplex.net>

	* tagged as mccurtain-0.0.11

	* Makefile: include apps in distclean target.

2024-05-22  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as mccurtain-0.0.9

	* More ASes added to etc/asn-list.json

2024-05-14  dwm  <dwm@nomnom.mcplex.net>

	* tagged as mccurtain-0.0.8

	* etc/asn-list.json: Added AS 136052.

2024-05-14  Daniel W. McRobb  <dwm@www.mcplex.net>

	* tagged as mccurtain-0.0.7

	* etc/asn-list.json: more ASes added.

2024-05-13  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as mccurtain-0.0.6

	* apps/mccurtain/mccurtain.cc: Added port number command line option.

2024-05-09  Daniel McRobb  <dwm@toto.mcplex.net>

	* tagged as mccurtain-0.0.5

	* etc/asn-list.json: more ASes added.

2024-05-07  dwm  <dwm@ria.mcplex.net>

	* tagged as mccurtain-0.0.4

	* packaging/fbsd_manifest.in: Correct libDwm version to 0.9.23

2024-05-07  Daniel McRobb  <dwm@thrip.mcplex.net>

	* tagged as mccurtain-0.0.3

	* apps/mccurtain/Makefile: include manpage in tarprep target.

	* tagged as mccurtain-0.0.2

	* configure.ac, configure: We need at least version 0.9.23 of libDwm.

	* tagged as mccurtain-0.0.1

