@@ -197,7 +197,7 @@ ServiceAddress: '{' ADDRESS '=' STRING ';' '}'
   else {
     boost::system::error_code  ec;
     boost::asio::ip::address  addr =
-      boost::asio::ip::address::from_string(*$4, ec);
+      boost::asio::ip::make_address(*$4, ec);
     if (ec) {
       mccurtaincfgerror("invalid IP address");
       delete $4;
@@ -226,7 +226,7 @@ ServiceAddress: '{' ADDRESS '=' STRING ';' '}'
   }
   else {
     boost::system::error_code  ec;
-    baip::address  addr = baip::address::from_string(*$4, ec);
+    baip::address  addr = baip::make_address(*$4, ec);
     if (ec) {
       mccurtaincfgerror("invalid IP address");
       delete $4;
@@ -255,7 +255,7 @@ ServiceAddress: '{' ADDRESS '=' STRING ';' '}'
   }
   else {
     boost::system::error_code  ec;
-    baip::address addr = baip::address::from_string(*$8, ec);
+    baip::address addr = baip::make_address(*$8, ec);
     if (ec) {
       mccurtaincfgerror("invalid IP address");
       delete $8;
