@@ -1,5 +1,9 @@
 2025-09-03  dwm  <dwm@ria.mcplex.net>
 
+	* classes/src/DwmMcCurtainConfigParse.y: Replaced
+	boost::asio::ip::address::from_string()
+	with boost::asio::ip::make_address().
+
 	* dwm.m4, configure: Use /opt/local/libexec/boost/1.88
 	instead of /opt/local/libexec/boost/1.81 in boost asio
 	search path.
